<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/tvSsrValue"
        style="@style/RobotoRegular"
        android:layout_centerVertical="true"
        android:text= "@string/lorem_ipsum"
        android:textSize="14sp"
        android:textColor="#24253d"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_width="220dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvSsrPax"
        style="@style/RobotoRegular"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/tvSsrValue"
        android:text= "@string/text_x1"
        android:textSize="14sp"
        android:textColor="#2b9a8e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSsrPrice"
        android:layout_centerVertical="true"
        style="@style/RobotoMedium"
        android:text="@string/hargaTotal"
        android:textSize="14sp"
        android:textColor="#939396"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_alignParentEnd="true" />


</RelativeLayout>