<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_width="30dp"
            android:background="@drawable/rounded_booking_contact"
            android:layout_height="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#91929e"
                    android:text="@string/text_x" />
                <TextView
                    android:id="@+id/number_data_infant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#00776a"
                    android:text="@string/text_1"/>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#656677"
                android:text="@string/text_infant_or_child_passenger" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#91929e"
                android:text="@string/text_below_age_15"
                android:layout_marginTop="2dp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/line_vertical_infant"
            android:layout_width="2dp"
            android:layout_height="244dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="34dp"
            android:background="#91929e"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="65dp"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#8024253d"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/title"/>

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        android:text="@string/text_mstr" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="#f5f5f5">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="#24253d"
                        android:gravity="center"
                        android:text="@string/text_ms" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#91929e"
                    android:text="@string/passengers" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:focusable="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="#24253d"
                            android:text=""
                            android:background="@color/transparent"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="#b2bbc6"/>

                    </LinearLayout>


                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#5488c1"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/text_as_on_birth_certificate"
                    android:layout_marginTop="2dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#91929e"
                    android:text="@string/text_birth_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textColor="#24253d"
                                tools:text="29"
                                android:background="@color/transparent"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="#b2bbc6"/>

                        <TextView
                            android:layout_marginTop="4dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="#5488c1"
                            android:gravity="center_horizontal"
                            android:text="@string/text_dd"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textColor="#24253d"
                                tools:text="October"
                                android:background="@color/transparent"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="#b2bbc6"/>

                        <TextView
                            android:layout_marginTop="4dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="#5488c1"
                            android:gravity="center_horizontal"
                            android:text="@string/text_mm"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textColor="#24253d"
                                tools:text="2020"
                                android:background="@color/transparent"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="#b2bbc6"/>

                        <TextView
                            android:layout_marginTop="4dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="#5488c1"
                            android:gravity="center_horizontal"
                            android:text="@string/text_yyyy"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="#91929e"
                        android:gravity="end"
                        android:text="@string/text_2_years_old"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"/>


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>