<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_title_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#00776a"
        android:text="@string/departure_flight"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_default" />


    <RelativeLayout
        android:layout_marginTop="15dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5">

        <ImageView
            android:id="@+id/img_airline"
            android:layout_width="30dp"
            android:layout_height="22dp"
            android:src="@drawable/background_slider"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="10dp">
        </ImageView>

        <TextView
            android:id="@+id/tv_city_code"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#24253d"
            android:text="@string/flightRoute"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/ivRemoveBaggage"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_delete"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name_passanger"
            android:layout_marginTop="15dp"
            style="@style/RobotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#939396"
            android:text="@string/passengers"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/tvTotalBaggage"
            style="@style/RobotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_kg"
            android:textColor="#939396"
            android:textSize="14sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_list_item_bagage">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/line_baggage"
        android:layout_width="335dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#e0e0e1"
        android:orientation="horizontal"
        android:visibility="gone">
    </LinearLayout>

</LinearLayout>